@@ -402,11 +402,12 @@ static int xmp_removexattr(const char *path, const char *name)
 #endif /* HAVE_SETXATTR */
 
 static int xmp_lock(const char *path, struct fuse_file_info *fi, int cmd,
-                    struct flock *lock, uint64_t owner)
+                    struct flock *lock)
 {
     (void) path;
 
-    return ulockmgr_op(fi->fh, cmd, lock, &owner, sizeof(owner));
+    return ulockmgr_op(fi->fh, cmd, lock, &fi->lock_owner,
+                       sizeof(fi->lock_owner));
 }
 
 static struct fuse_operations xmp_oper = {
